[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Vector.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0485

[node name="Player" type="Area2D"]
position = Vector2( 528.951, 289.405 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 250.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0934143, -0.121201 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Dash" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="VectorDireccion" type="Node2D" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]
